--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
     <div class="p-5">
         <h2 class="text-center">按門鈴</h2>
+        <h4>請按紅色按鈕使門鈴運作</h4>
         <div class="container p-4">
             <div id="img01">
                 <img src="ring001.png" id="r1" usemap="#r1btn" alt="ring01.png" class="ring01  ">
